@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-01T01:44:56Z",
+  "timestamp" : "2022-08-02T01:49:22Z",
   "count_outdated" : 426,
   "uniques_outdated" : 245,
-  "count" : 456,
-  "uniques" : 261,
+  "count" : 458,
+  "uniques" : 262,
   "clones" : [
     {
       "timestamp": "2022-07-19T00:00:00Z",
@@ -93,6 +93,13 @@
       "timestamp": "2022-07-31T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-01T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
