@@ -1,5 +1,5 @@
 {
-  "count": 30,
+  "count": 32,
   "uniques": 4,
   "clones": [
     {
@@ -65,6 +65,11 @@
     {
       "timestamp": "2022-07-31T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-01T00:00:00Z",
+      "count": 2,
       "uniques": 1
     }
   ]
