@@ -1,3 +1,10 @@
+2022-08-02T01:49:22Z:
+* notice: last 14d: unq all: 4 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 245 426 / 261 456
+* notice: next accum: outdated-unq outdated-all / unq all: 245 426 / 262 458
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-08-01]
+
 2022-08-01T01:44:56Z:
 * notice: last 14d: unq all: 4 30
 * notice: prev accum: outdated-unq outdated-all / unq all: 245 426 / 261 455
